--- a/prediction/templates/prediction/predict.html
+++ b/prediction/templates/prediction/predict.html
@@ -5,14 +5,10 @@
     {% for field in form %}
         <div style="margin-top: 1em;">
             <label for="{{ field.auto_id }}" id="{{ field.auto_id }}-label" style="margin-right: 2em;">{{ field.label }}</label>
-            {% if field.data %}
-                {% if field.widget_type == 'checkbox' %}
-                    <input id="{{ field.auto_id }}" name="{{ field.name }}" type="{{ field.widget_type }}" checked>
-                {% else %}
-                    <input id="{{ field.auto_id }}" name="{{ field.name }}" type="{{ field.widget_type }}" value="{{ field.data }}">
-                {% endif %}
+            {% if field.widget_type == 'checkbox' %}
+                <input id="{{ field.auto_id }}" name="{{ field.name }}" type="{{ field.widget_type }}" {% if field.data %}checked{% endif %}>
             {% else %}
-                <input id="{{ field.auto_id }}" name="{{ field.name }}" type="{{ field.widget_type }}">
+                <input id="{{ field.auto_id }}" name="{{ field.name }}" type="{{ field.widget_type }}" value="{{ field.data|default_if_none:'' }}">
             {% endif %}
         </div>
     {% endfor %}
