--- a/prediction/templates/prediction/predict.html
+++ b/prediction/templates/prediction/predict.html
@@ -5,11 +5,7 @@
     {% for field in form %}
         <div style="margin-top: 1em;">
             <label for="{{ field.auto_id }}" id="{{ field.auto_id }}-label" style="margin-right: 2em;">{{ field.label }}</label>
-            {% if field.widget_type == 'checkbox' %}
-                <input id="{{ field.auto_id }}" name="{{ field.name }}" type="{{ field.widget_type }}" {% if field.data %}checked{% endif %}>
-            {% else %}
-                <input id="{{ field.auto_id }}" name="{{ field.name }}" type="{{ field.widget_type }}" value="{{ field.data|default_if_none:'' }}">
-            {% endif %}
+            {{ field }}
         </div>
     {% endfor %}
     <input type="submit" value="Predict" style="margin-top: 2em;">
